# audio-scribe

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  sources.list
backend/app/: main.py
backend/app/routes/: transcribe.py
backend/app/services/: grammar_fixer.py  transcription.py
backend/app/tests/: test_routes.py  test_services.py  test_transcription.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/coverage/: index.html
frontend/coverage/frontend/: index.html  vite.config.js.html
frontend/coverage/frontend/src/: App.jsx.html  index.html
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/tests/: App.test.jsx
