[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = "app/"
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config --asyncio-mode=auto"
testpaths = "app/tests"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'audioop' is deprecated"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"